--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.67.1",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.15",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
@@ -28,6 +33,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-transition-group": "^4.4.12",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
